--- a/trunk/code/CazualGamesDemo/CazualGamesDemo/CazualGames/CazualGames.csproj
+++ b/trunk/code/CazualGamesDemo/CazualGamesDemo/CazualGames/CazualGames.csproj
@@ -67,6 +67,7 @@
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Windows, Version=2.0.5.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e, processorArchitecture=MSIL" />
     <Reference Include="System.Xml">
       <Private>False</Private>
     </Reference>
