--- a/code/CazualGamesDemo/CazualGamesDemo/CazualGamesDemo/CazualGamesDemo.csproj
+++ b/code/CazualGamesDemo/CazualGamesDemo/CazualGamesDemo/CazualGamesDemo.csproj
@@ -50,6 +50,7 @@
     <XnaCompressContent>false</XnaCompressContent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Phone, Version=7.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Xna.Framework">
       <Private>False</Private>
     </Reference>
@@ -71,6 +72,7 @@
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Windows, Version=2.0.5.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e, processorArchitecture=MSIL" />
     <Reference Include="System.Xml">
       <Private>False</Private>
     </Reference>
@@ -85,7 +87,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Screens\HighScoresScreen.cs" />
+    <Compile Include="Screens\LevelScreen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screens\StartScreen.cs" />
+    <Compile Include="Screens\TutorialScreen.cs" />
     <None Include="Properties\AppManifest.xml">
       <XnaPlatformSpecific>true</XnaPlatformSpecific>
     </None>
