--- a/trunk/code/CazualGamesDemo/CazualGamesDemo/CazualGamesDemo/CazualGamesDemo.csproj
+++ b/trunk/code/CazualGamesDemo/CazualGamesDemo/CazualGamesDemo/CazualGamesDemo.csproj
@@ -87,9 +87,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Services\ILeaderBoardService.cs" />
+    <Compile Include="Services\Leader.cs" />
+    <Compile Include="Services\LeaderBoardService.cs" />
+    <Compile Include="Screens\LevelScreenSprites\CarSprite.cs" />
+    <Compile Include="Screens\DemoScreenBase.cs" />
     <Compile Include="Screens\HighScoresScreen.cs" />
     <Compile Include="Screens\LevelScreen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screens\LevelScreenSprites\PigeonPoopOnCarSprite.cs" />
+    <Compile Include="Screens\LevelScreenSprites\PigeonPoopSprite.cs" />
+    <Compile Include="Screens\LevelScreenSprites\PigeonSprite.cs" />
     <Compile Include="Screens\StartScreen.cs" />
     <Compile Include="Screens\TutorialScreen.cs" />
     <None Include="Properties\AppManifest.xml">
